Fixed horizontal scrollbar

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,7 +2,6 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  overflow-x: hidden;
 }
 
 .heroButtonsWrapper {
