--- a/src/components/glitch/glitch.module.scss
+++ b/src/components/glitch/glitch.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
-  position: fixed;
+  z-index: 99;
+  background-color: red;
+  position: absolute;
   top: 500px;
   right: 10px;
   transform: rotate(270deg);
